{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 222,
  "lineage": "46368028-c3d2-06a6-65e8-30db661469e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "demo2_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bf5c2266480400ad",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-36-31-120.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.31.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.demo2_internet_gateway",
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo2_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:internet-gateway/igw-0e68b612dabe424a4",
            "id": "igw-0e68b612dabe424a4",
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo2-igw"
            },
            "vpc_id": "vpc-09f47a1892ff738dc"
          },
          "dependencies": [
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo2_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf5c2266480400ad",
            "id": "nat-0ab52ad68343dec21",
            "network_interface_id": "eni-0088d4d579858706f",
            "private_ip": "10.1.10.138",
            "public_ip": "13.36.31.120",
            "subnet_id": "subnet-00be13de0e3b213b0",
            "tags": {
              "Name": "demo2-nat"
            }
          },
          "dependencies": [
            "aws_eip.demo2_nat_eip",
            "aws_internet_gateway.demo2_internet_gateway",
            "aws_subnet.demo2_pub_subnet_1",
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo2_prvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e2923102ea798136",
            "owner_id": "306891754974",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ab52ad68343dec21",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo2-prvt-rtb"
            },
            "vpc_id": "vpc-09f47a1892ff738dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.demo2_nat_eip",
            "aws_internet_gateway.demo2_internet_gateway",
            "aws_nat_gateway.demo2_nat",
            "aws_subnet.demo2_pub_subnet_1",
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo2_pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02f13371a3d2d4a86",
            "owner_id": "306891754974",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e68b612dabe424a4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo2-pub-rtb"
            },
            "vpc_id": "vpc-09f47a1892ff738dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo2_internet_gateway",
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo2_prvt_rtb_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01560c91e62e0d445",
            "route_table_id": "rtb-0e2923102ea798136",
            "subnet_id": "subnet-086038894a341a019"
          },
          "dependencies": [
            "aws_eip.demo2_nat_eip",
            "aws_internet_gateway.demo2_internet_gateway",
            "aws_nat_gateway.demo2_nat",
            "aws_route_table.demo2_prvt_route_table",
            "aws_subnet.demo2_prvt_subnet_1",
            "aws_subnet.demo2_pub_subnet_1",
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo2_prvt_rtb_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebad133e5c82de86",
            "route_table_id": "rtb-0e2923102ea798136",
            "subnet_id": "subnet-06c857b34a04a48e4"
          },
          "dependencies": [
            "aws_eip.demo2_nat_eip",
            "aws_internet_gateway.demo2_internet_gateway",
            "aws_nat_gateway.demo2_nat",
            "aws_route_table.demo2_prvt_route_table",
            "aws_subnet.demo2_prvt_subnet_2",
            "aws_subnet.demo2_pub_subnet_1",
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo2_prvt_rtb_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099259b4f56ebec0d",
            "route_table_id": "rtb-0e2923102ea798136",
            "subnet_id": "subnet-0733b59b64e4db621"
          },
          "dependencies": [
            "aws_eip.demo2_nat_eip",
            "aws_internet_gateway.demo2_internet_gateway",
            "aws_nat_gateway.demo2_nat",
            "aws_route_table.demo2_prvt_route_table",
            "aws_subnet.demo2_prvt_subnet_3",
            "aws_subnet.demo2_pub_subnet_1",
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo2_pub_rtb_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073838313add9558a",
            "route_table_id": "rtb-02f13371a3d2d4a86",
            "subnet_id": "subnet-00be13de0e3b213b0"
          },
          "dependencies": [
            "aws_internet_gateway.demo2_internet_gateway",
            "aws_route_table.demo2_pub_route_table",
            "aws_subnet.demo2_pub_subnet_1",
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo2_pub_rtb_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a9eeaf510047aa0",
            "route_table_id": "rtb-02f13371a3d2d4a86",
            "subnet_id": "subnet-03535681f148e60d2"
          },
          "dependencies": [
            "aws_internet_gateway.demo2_internet_gateway",
            "aws_route_table.demo2_pub_route_table",
            "aws_subnet.demo2_pub_subnet_2",
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo2_pub_rtb_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ba8ef95345285f2",
            "route_table_id": "rtb-02f13371a3d2d4a86",
            "subnet_id": "subnet-07bd8d065dcacc29e"
          },
          "dependencies": [
            "aws_internet_gateway.demo2_internet_gateway",
            "aws_route_table.demo2_pub_route_table",
            "aws_subnet.demo2_pub_subnet_3",
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo2_prvt_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:subnet/subnet-086038894a341a019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.40.0/24",
            "id": "subnet-086038894a341a019",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo2-prvt-subnet-1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09f47a1892ff738dc"
          },
          "dependencies": [
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo2_prvt_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:subnet/subnet-06c857b34a04a48e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.50.0/24",
            "id": "subnet-06c857b34a04a48e4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo2-prvt-subnet-2",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09f47a1892ff738dc"
          },
          "dependencies": [
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo2_prvt_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:subnet/subnet-0733b59b64e4db621",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.1.60.0/24",
            "id": "subnet-0733b59b64e4db621",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo2-prvt-subnet-3",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09f47a1892ff738dc"
          },
          "dependencies": [
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo2_pub_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:subnet/subnet-00be13de0e3b213b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.10.0/24",
            "id": "subnet-00be13de0e3b213b0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo2-pub-subnet-1",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09f47a1892ff738dc"
          },
          "dependencies": [
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo2_pub_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:subnet/subnet-03535681f148e60d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.20.0/24",
            "id": "subnet-03535681f148e60d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo2-pub-subnet-2",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09f47a1892ff738dc"
          },
          "dependencies": [
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo2_pub_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:subnet/subnet-07bd8d065dcacc29e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.1.30.0/24",
            "id": "subnet-07bd8d065dcacc29e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo2-pub-subnet-3",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09f47a1892ff738dc"
          },
          "dependencies": [
            "aws_vpc.demo2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:vpc/vpc-09f47a1892ff738dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0ab128f1dda9e1f99",
            "default_route_table_id": "rtb-0fd3f11b977e24f0c",
            "default_security_group_id": "sg-0f13f4314f5dbd4d2",
            "dhcp_options_id": "dopt-86e42bee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09f47a1892ff738dc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fd3f11b977e24f0c",
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo2-k8s-vpc"
            }
          }
        }
      ]
    }
  ]
}